# Platform-for-publishing-paid-content

./: .coveragerc  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
fixtures/: post.json  users.json
post/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_alter_post_options.py  0003_rename_descriptions_post_description.py  0004_subscription.py  0005_subscription_link_subscription_session_id_and_more.py  0006_alter_subscription_type_of_sub.py  0007_subscription_end_date_subscription_is_active_and_more.py  0008_post_is_free_post_preview.py
post/templates/post/: base.html  choose_sub.html  confirm_success.html  payment.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
post/templates/post/includes/: inc_menu.html
users/: admin.py  context_processor.py  forms.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_first_name_alter_user_last_name.py  0004_user_is_author.py  0005_alter_user_token.py
users/templates/users/: login.html  profile_from.html  sms_confirm.html  user_form.html  user_list.html
